debian-installer (20130613+deb7u3) UNRELEASED; urgency=medium

  [ Didier Raboud ]
  * Use APT `apt-config dump`s result to determine where to find the
    system's sources.list (Closes: #775136)

 -- Cyril Brulebois <kibi@debian.org>  Tue, 01 Sep 2015 15:06:16 +0200

debian-installer (20130613+deb7u2) wheezy; urgency=low

  [ Martin Michlmayr ]
  * Add support for QNAP HS-210.  Thanks to Kevin Woldt for the patch.

  [ Cyril Brulebois ]
  * Disable translation-status check when proposed-updates is enabled.
    This file isn't going to be updated during stable's lifecycle, so
    avoid pointless warning and sleeping.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 20 Apr 2014 11:13:37 +0200

debian-installer (20130613+deb7u1) wheezy; urgency=low

  [ Martin Michlmayr ]
  * Recognize QNAP TS-12x, TS-22x and TS-42x devices.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 09 Oct 2013 20:16:11 +0200

debian-installer (20130613) wheezy; urgency=low

  [ Samuel Thibault ]
  * Fix boot beep.

  [ Cyril Brulebois ]
  * Enable proposed updates in debian/rules for the wheezy point
    releases.
  * Set DEBIAN_VERSION to just '7'.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 13 Jun 2013 11:56:46 +0200

debian-installer (20130430) unstable; urgency=low

  [ Aurelien Jarno ]
  * Include virtio-modules in sparc and sparc64 netboot images (Closes: #704672).

 -- Cyril Brulebois <kibi@debian.org>  Tue, 30 Apr 2013 23:10:12 +0200

debian-installer (20130415) unstable; urgency=low

  [ Aurelien Jarno ]
  * Include nic-modules in armhf/vexpress netboot image.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 15 Apr 2013 20:35:44 +0200

debian-installer (20130412) unstable; urgency=low

  [ Samuel Thibault ]
  * internal.xml: Point at the repository README instead of duplicating
    checkout information.

  [ Ben Hutchings ]
  * Include {ata,mtd,pata,sata}-modules in mx5 netboot image (Closes: #675017)
  * Replace nic-modules with nic-{usb,wireless}-modules in armhf netboot